--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="share">Share</string>
     <string name="currency">Currency</string>
     <string name="details">Details</string>
+    <string name="codigo_o_nombre">Código o nombre</string>
 </resources>
