Add update item to menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="filter">Filter</string>
     <string name="order">Order</string>
     <string name="share">Share</string>
+    <string name="update">Update</string>
     <string name="currency">Currency</string>
     <string name="details">Details</string>
     <string name="codigo_o_nombre">Código o nombre</string>
