--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="currency">Currency</string>
     <string name="details">Details</string>
     <string name="codigo_o_nombre">Código o nombre</string>
+    <string name="try_again">Try again!</string>
 </resources>
